--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -126,7 +126,7 @@ Second, it is very slow to traverse a list, which may introduce thread contentio
 \caption{Avoiding the traverse of per-thread freelist\label{fig:perthreadlist}}
 \vspace{-0.1in}
 \end{wrapfigure}
-In order to avoid the pollution on the per-thread cache, each per-thread freelist maintains two pointers that pointing to the least recent object (shown as the \texttt{Tail} object) and the $nth$ object separately, as shown in Figure~\ref{fig:perthreadlist}. Therefore, a thread can migrate $n$ objects (between $(n-1)th$ and the \texttt{Tail} object) easily. 
+In order to avoid the pollution on the per-thread cache, each per-thread freelist maintains two pointers that pointing to the least recent object (shown as the \texttt{Tail} object) and the $nth$ object separately, as shown in Fig.~\ref{fig:perthreadlist}. Therefore, a thread can migrate $n$ objects (between $(n-1)th$ and the \texttt{Tail} object) easily. 
 %It only requires a forward check to obtain the pointer of $(n-1)th$ object and then it could move out $n$ objects at a time. 
 After the migration,  the \texttt{Tail} pointer can be set to the original $nth$ object. But this mechanism alone cannot reduce the contention when multiple threads are concurrently obtaining objects.
 
@@ -137,7 +137,7 @@ After the migration,  the \texttt{Tail} pointer can be set to the original $nth$
 \caption{An array of freelists for per-node heap\label{fig:listarray}}
 \vspace{-0.2in}
 \end{wrapfigure}
-In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circular array of freelists as shown in Figure~\ref{fig:listarray}, where the number of entries is a variable that can be changed by the compilation flag. Each entry has two points, head and tail separately. In order to support the put and get operations to the freelist, this array has two pointers, \texttt{toGetIndex} and  \texttt{toPutIndex}. If a thread tries to obtain freed objects from the per-node heap, it will obtain all objects in the freelist pointed by the \texttt{toGetIndex}, and update the index afterwards. If the freelist pointed by the \texttt{toGetIndex} has no freed objects, there is no freed objects in the per-node heap for this size class.  The put operation will utilize the pointer \texttt{toPutIndex}. As described above, there are two scenarios for the put operation. First, a thread may put an freed object to the per-node freelist, if this object is originated from a different node. In this case, the object will be placed into the freelist pointed by the \texttt{toPutIndex}, but the index is not updated after the deallocation. Second, when freed objects in a per-thread freelist is above the predefined watermark, the thread will migrate a batch of objects to the freelist pointed by the \texttt{toPutIndex}. After this migration, the current freelist is considered to be full, and will update the index to the next entry in the circular array.
+In order to avoid the bottleneck of the per-node heap, \NM{} introduces a circular array of freelists as shown in Fig.~\ref{fig:listarray}, where the number of entries is a variable that can be changed by the compilation flag. Each entry has two points, head and tail separately. In order to support the put and get operations to the freelist, this array has two pointers, \texttt{toGetIndex} and  \texttt{toPutIndex}. If a thread tries to obtain freed objects from the per-node heap, it will obtain all objects in the freelist pointed by the \texttt{toGetIndex}, and update the index afterwards. If the freelist pointed by the \texttt{toGetIndex} has no freed objects, there is no freed objects in the per-node heap for this size class.  The put operation will utilize the pointer \texttt{toPutIndex}. As described above, there are two scenarios for the put operation. First, a thread may put an freed object to the per-node freelist, if this object is originated from a different node. In this case, the object will be placed into the freelist pointed by the \texttt{toPutIndex}, but the index is not updated after the deallocation. Second, when freed objects in a per-thread freelist is above the predefined watermark, the thread will migrate a batch of objects to the freelist pointed by the \texttt{toPutIndex}. After this migration, the current freelist is considered to be full, and will update the index to the next entry in the circular array.
 
    
 
