--- a/paper/memorytable.tex
+++ b/paper/memorytable.tex
@@ -5,9 +5,9 @@
   \fontsize{6.5}{8}\selectfont
   \caption{Memory consumption of Different Allocators in Machine B (8-node)\label{tab:memory_consumption}}
   
-    \begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \begin{tabular}{|l|r|r|r|r|r|r|r|}
     \hline
-    \multirow{2}{*}{Programs}&
+    \multirow{2}{*}{Applications}&
     \multicolumn{7}{c}{Memory Usage (MB)}\\
     \cline{2-8}
     &Linux's Default&\NM{}&TcMalloc&TcMalloc-NUMA&jemalloc&TBB&Scalloc \\ \hline
